resolves Samedis-care/samedis-care-issues#1427

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -17,7 +17,8 @@
     "email": "Email",
     "new": "No account yet? Create a new account!",
     "connect": "or connect with",
-    "next": "Next"
+    "next": "Next",
+    "mailhint": "Enter you mail and click next to login, or create a new account if you don't have one."
   },
   "auth": {
     "error": "An error occurred",
