Custom OAuth provider implementation (managed accounts)

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -116,6 +116,10 @@
       "captcha": {
         "title": "Captcha",
         "message": "Please complete the captcha"
+      },
+      "email-custom-auth": {
+        "title": "Managed account",
+        "message": "Your organization uses managed accounts. You will be redirected to your organization's login page after clicking OK."
       }
     },
     "result": {
