--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -66,7 +66,11 @@
         "password": "Password",
         "forgot": "Forgot password?",
         "keep-session": "Stay signed in",
-        "next": "Next"
+        "next": "Next",
+        "recover": "Recover account",
+        "recover-dialog": {
+          "title": "Recover account"
+        }
       }
     },
     "totp": {
@@ -87,6 +91,33 @@
         "error": {
           "title": "Failed sending verification email"
         }
+      }
+    },
+    "confirm-recovery-email": {
+      "title": "Confirm recovery email",
+      "info": "Click the button below to confirm your recovery email and enable future recovery of your account.",
+      "button": "Confirm",
+      "success": {
+        "title": "Recovery email confirmed"
+      },
+      "error": {
+        "title": "Could not confirm recovery email"
+      }
+    },
+    "recover_account": {
+      "email-invalid": "Email invalid",
+      "recovery-email-invalid": "Recovery email invalid",
+      "title": "Recover account",
+      "info": "Please enter your information below to complete the recovery process. You will be logged into your account afterwards.",
+      "email": "Email",
+      "email-placeholder": "Enter your current account email",
+      "recovery_email": "Recovery email",
+      "recovery_email-placeholder": "Enter your accounts recovery email",
+      "do": "Recover account"
+    },
+    "recovery_email": {
+      "error": {
+        "title": "Failed recovering account"
       }
     }
   },
