UX improvements in account recovery / email change workflows

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -23,14 +23,27 @@
   "auth": {
     "error": "An error occurred",
     "confirm": {
-      "title": "Confirm your account",
-      "info": "By pressing the button below you confirm your email address is valid and your account will be activated",
-      "button": "Confirm account",
-      "success": {
-        "title": "Account successfully confirmed"
+      "default": {
+        "title": "Confirm your account",
+        "info": "By pressing the button below you confirm your email address is valid and your account will be activated",
+        "button": "Confirm account",
+        "success": {
+          "title": "Account successfully confirmed"
+        },
+        "error": {
+          "title": "Account confirmation failed"
+        }
       },
-      "error": {
-        "title": "Account confirmation failed"
+      "email_change": {
+        "title": "Confirm your new email",
+        "info": "By pressing the button below you confirm your new email address is valid",
+        "button": "Confirm email",
+        "success": {
+          "title": "Email successfully confirmed"
+        },
+        "error": {
+          "title": "Email confirmation failed"
+        }
       }
     },
     "password": {
