resolves Samedis-care/samedis-care-issues#1798

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -164,6 +164,18 @@
       "email-custom-auth": {
         "title": "Managed account",
         "message": "Your organization uses managed accounts. You will be redirected to your organization's login page after clicking OK."
+      },
+      "password": {
+        "short": "Too short",
+        "sec1": "Very weak",
+        "sec2": "Weak",
+        "sec3": "Okay",
+        "sec4": "Good",
+        "sec5": "Strong"
+      },
+      "password-weak": {
+        "title": "Password weak",
+        "message": "Your password is too weak"
       }
     },
     "result": {
