resolves Samedis-care/samedis-care-issues#1798

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -166,7 +166,7 @@
         "message": "Your organization uses managed accounts. You will be redirected to your organization's login page after clicking OK."
       },
       "password": {
-        "short": "Too short",
+        "short": "Too short (min. {{MIN_LEN}} chars)",
         "sec1": "Very weak",
         "sec2": "Weak",
         "sec3": "Okay",
