Better password lock-out dialog title

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -132,7 +132,8 @@
       "error": {
         "title": "Failed recovering account"
       }
-    }
+    },
+    "error-locked": "Account locked"
   },
   "create": {
     "title": "Sign up",
